add personal message to header and update resume link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
 											</h1>
 											<p>Software Engineer</p>
 										</header>
-										<p>Experience with React-Redux, Javascript, Ruby on Rails, PostgreSQL, AWS S3</p>
+										<p>
+											Experience with React-Redux, Javascript, Ruby on Rails, PostgreSQL, and AWS S3.
+											Passionate about building impactful products and helping those around me. 
+											<br>
+											<br>
+											When I'm not working, I like to go out and eat food, try cooking new dishes,
+											and (when it's safe to do so) attend live music concerts, but I also
+											have those days when I like to stay in bed and watch Friends or anime! 
+											I try to volunteer as much as I can, and I love listening to KPOP and
+											electronic music. 
+										</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -158,21 +168,21 @@
 											</ul>
 										</article>
 										<article>
+											<a href="https://grayson-poon.github.io/spider-ling/" class="image" target="_blank"><img src="images/spider-ling.jpg" /></a>
+											<h3>Spider-ling</h3>
+											<p>Spidey is trapped and needs your help! Navigate Spidey to the directed locations. Created with Vanilla JS and HTML Canvas.</p>
+											<ul class="actions">
+												<li><a href="https://github.com/grayson-poon/spider-ling" class="button" target="_blank">GitHub</a></li>
+												<li><a href="https://grayson-poon.github.io/spider-ling/" class="button" target="_blank">Live Link</a></li>
+											</ul>
+										</article>
+										<article>
 											<a href="https://quickly-healthy.herokuapp.com/#/" class="image" target="_blank"><img src="images/quickly-healthy.jpg" /></a>
 											<h3>Quickly-healthy</h3>
 											<p>An application that quickly connects patients to nearby in-network healthcare providers. Quickly-healthy allows users to create appointments and complete pre-check-in forms, serving to expedite boilerplate processes and get care for its users as quickly as possible.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/lyhourlay1/Quickly-healthy" class="button" target="_blank">GitHub</a></li>
 												<li><a href="https://quickly-healthy.herokuapp.com/#/" class="button" target="_blank">Link Link</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="https://grayson-poon.github.io/spider-ling/" class="image" target="_blank"><img src="images/spider-ling.jpg" /></a>
-											<h3>Spider-ling</h3>
-											<p>Spidey needs your help to get to his next mission! Navigate Spidey to the directed locations. Created with Vanilla JS and HTML Canvas.</p>
-											<ul class="actions">
-												<li><a href="https://github.com/grayson-poon/spider-ling" class="button" target="_blank">GitHub</a></li>
-												<li><a href="https://grayson-poon.github.io/spider-ling/" class="button" target="_blank">Live Link</a></li>
 											</ul>
 										</article>
 									</div>
@@ -228,30 +238,6 @@
 								</nav>
 
 							<!-- Section -->
-								<!-- <section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section> -->
-
-							<!-- Section -->
 								<section>
 									<header class="major">
 										<h2>Links</h2>
@@ -276,7 +262,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="https://drive.google.com/file/d/1gJNQpXOCgiVE1JtXSAJ8fOgIpI7ECN8T/view?usp=sharing" class="icon solid fa-file-pdf" target="_blank">
+											<a href="https://drive.google.com/file/d/19QZzcHb7IUZ6SUN4RBA7ROiMPzNclUrQ/view?usp=sharing" class="icon solid fa-file-pdf" target="_blank">
 												<div>Resume</div>
 												<span class="label">Github</span>
 											</a>
