--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										</header>
 										<p>
 											Experience with React-Redux, Javascript, Ruby on Rails, PostgreSQL, and AWS S3.
-											Passionate about building impactful products and helping those around me. 
+											Passionate about building impactful products that serve the communities around me. 
 											<br>
 											<br>
 											When I'm not working, I like to go out and eat food, try cooking new dishes,
