change header information

--- a/index.html
+++ b/index.html
@@ -43,15 +43,22 @@
 											<p>Software Engineer</p>
 										</header>
 										<p>
-											Experience with React-Redux, Javascript, Ruby on Rails, PostgreSQL, and AWS S3.
+											Experience with React-Redux, Ruby on Rails, Javascript, PostgreSQL, and AWS S3.
 											Passionate about building impactful products that serve the communities around me. 
 											<br>
 											<br>
-											When I'm not working, I like to go out and eat food, try cooking new dishes,
-											and (when it's safe to do so) attend live music concerts, but I also
-											have those days when I like to stay in bed and watch Friends or anime! 
-											I try to volunteer as much as I can, and I love listening to KPOP and
-											electronic music. 
+											Prior to my endeavors as a software engineer, I was working as a pediatric medical assistant 
+											and volunteering with multiple non-profit organizations. During this time, 
+											I saw a great way to foster inclusivity and create equity in access to 
+											social and economic opportunities through technology. This is what  
+											sparked my transition from patient care to software.
+											<br>
+											<br>
+											When I'm not working, I try to volunteer as much as I can. 
+											I enjoy going out to eat food, cooking with friends,
+											and (when it's safe to do so) attending live music concerts. I also
+											have those days when I like to find new music to listen to, 
+											catch up on anime, or rewatch Friends!
 										</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
