--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 											<br>
 											Prior to my endeavors as a software engineer, I was working as a pediatric medical assistant 
 											and volunteering with multiple non-profit organizations. During this time, 
-											I saw a great way to foster inclusivity and create equity in access to 
+											I saw ways to foster inclusivity and create equity in access to 
 											social and economic opportunities through technology. This is what  
 											sparked my transition from patient care to software.
 											<br>
 											<br>
 											When I'm not working, I try to volunteer as much as I can. 
-											I enjoy going out to eat food, cooking with friends,
+											I enjoy going out to eat, cooking with friends,
 											and (when it's safe to do so) attending live music concerts. I also
 											have those days when I like to find new music to listen to, 
 											catch up on anime, or rewatch Friends!
