--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Grayson Poon</title>
+		<title>Portfolio - Grayson Poon</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
@@ -38,27 +38,14 @@
 								<section id="banner">
 									<div class="content" id="about">
 										<header>
-											<h1>Grayson Poon<br />
-											</h1>
-											<p>Software Engineer</p>
+											<h1>Grayson Poon</h1>
+											<!-- <p>Software Engineer</p> -->
 										</header>
 										<p>
-											Experience with React-Redux, Ruby on Rails, Javascript, PostgreSQL, and AWS S3.
-											Passionate about building impactful products that serve the communities around me. 
+											Former healthcare worker, now a coder. I’m determined to build software products that help those around me.
 											<br>
 											<br>
-											Prior to my endeavors as a software engineer, I was working as a pediatric medical assistant 
-											and volunteering with multiple non-profit organizations. During this time, 
-											I saw ways to foster inclusivity and create equity in access to 
-											social and economic opportunities through technology. This is what  
-											sparked my transition from patient care to software.
-											<br>
-											<br>
-											When I'm not working, I try to volunteer as much as I can. 
-											I enjoy going out to eat, cooking with friends,
-											and (when it's safe to do so) attending live music concerts. I also
-											have those days when I like to find new music to listen to, 
-											catch up on anime, or rewatch Friends!
+											Experienced in Ruby on Rails, JavaScript, PostgreSQL, and the MERN stack, but excited to learn new technologies and grow as a developer.
 										</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
@@ -291,9 +278,9 @@
 								</section>
 
 							<!-- Footer -->
-								<footer id="footer">
+								<!-- <footer id="footer">
 									<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a></p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
