fix: typo in button text

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 											<p>An application that quickly connects patients to nearby in-network healthcare providers. Quickly-healthy allows users to create appointments and complete pre-check-in forms, serving to expedite boilerplate processes and get care for its users as quickly as possible.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/lyhourlay1/Quickly-healthy" class="button" target="_blank">GitHub</a></li>
-												<li><a href="https://quickly-healthy.herokuapp.com/#/" class="button" target="_blank">Link Link</a></li>
+												<li><a href="https://quickly-healthy.herokuapp.com/#/" class="button" target="_blank">Live Link</a></li>
 											</ul>
 										</article>
 									</div>
