--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
 											</ul>
 										</article>
 										<article>
-											<a href="https://quickly-healthy.herokuapp.com/#/" class="image" target="_blank"><img src="images/quickly-healthy.jpg" /></a>
+											<a href="https://quickly-healthy-personal.herokuapp.com/#/" class="image" target="_blank"><img src="images/quickly-healthy.jpg" /></a>
 											<h3>Quickly-healthy</h3>
 											<p>An application that quickly connects patients to nearby in-network healthcare providers. Quickly-healthy allows users to create appointments and complete pre-check-in forms, serving to expedite boilerplate processes and get care for its users as quickly as possible.</p>
 											<ul class="actions">
 												<li><a href="https://github.com/lyhourlay1/Quickly-healthy" class="button" target="_blank">GitHub</a></li>
-												<li><a href="https://quickly-healthy.herokuapp.com/#/" class="button" target="_blank">Live Link</a></li>
+												<li><a href="https://quickly-healthy-personal.herokuapp.com/#/" class="button" target="_blank">Live Link</a></li>
 											</ul>
 										</article>
 									</div>
