add auth-service-1 project

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 											<!-- <p>Software Engineer</p> -->
 										</header>
 										<p>
-											Former healthcare worker, now a coder. I’m determined to build software products that help those around me.
+											Former healthcare worker, now a coder.
 											<br>
 											<br>
-											Experienced in Ruby on Rails, JavaScript, PostgreSQL, and the MERN stack, but excited to learn new technologies and grow as a developer.
+											Experienced in React, Node, TypeScript, Ruby on Rails, PostgreSQL, and MongoDB, but excited to learn new technologies and grow as a developer.
 										</p>
 										<!-- <ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
@@ -168,6 +168,15 @@
 											<ul class="actions">
 												<li><a href="https://github.com/grayson-poon/spider-ling" class="button" target="_blank">GitHub</a></li>
 												<li><a href="https://grayson-poon.github.io/spider-ling/" class="button" target="_blank">Live Link</a></li>
+											</ul>
+										</article>
+										<article>
+											<!-- <a href="https://quickly-healthy-personal.herokuapp.com/#/" class="image" target="_blank"><img src="images/quickly-healthy.jpg" /></a> -->
+											<h3>Auth-Service-1</h3>
+											<p>An API to handle login, signup, and user account management functionalities. Built with Python3, Firebase Authentication, Uvicorn, and FastAPI</p>
+											<ul class="actions">
+												<li><a href="https://github.com/grayson-poon/auth-service-1" class="button" target="_blank">GitHub</a></li>
+												<!-- <li><a href="https://quickly-healthy-personal.herokuapp.com/#/" class="button" target="_blank">Live Link</a></li> -->
 											</ul>
 										</article>
 										<article>
