--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 											<!-- <p>Software Engineer</p> -->
 										</header>
 										<p>
-											Former healthcare worker, now a coder.
+											Former healthcare worker, now a coder. I’m determined to build software products that make an impact on those around me.
 											<br>
 											<br>
 											Experienced in React, Node, TypeScript, Ruby on Rails, PostgreSQL, and MongoDB, but excited to learn new technologies and grow as a developer.
