--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="https://drive.google.com/file/d/1KPljM6AqnS66qFFqkurxLYOKEjlyQIIY/view?usp=sharing" class="icon solid fa-file-pdf" target="_blank">
+											<a href="https://docs.google.com/document/d/1_nM0wYTBXYH7L3pbMUkbuko4CNRu4dv_Ioq5Knjv3i4/edit?usp=sharing" class="icon solid fa-file-pdf" target="_blank">
 												<div>Resume</div>
 												<span class="label">Github</span>
 											</a>
